# cryptopals-challenges

challenge1/: Cargo.toml
challenge1/src/: main.rs
challenge10/: Cargo.toml
challenge10/src/: main.rs
challenge11/: Cargo.toml
challenge12/: Cargo.toml
challenge13/: Cargo.toml
challenge14/: Cargo.toml
challenge15/: Cargo.toml
challenge16/: Cargo.toml
challenge17/: Cargo.toml
challenge18/: Cargo.toml
challenge2/: Cargo.toml
challenge20/: Cargo.toml
challenge21/: Cargo.toml
challenge22/: Cargo.toml
challenge23/: Cargo.toml
challenge24/: Cargo.toml
challenge25/: Cargo.toml
challenge26/: Cargo.toml
challenge27/: Cargo.toml
challenge28/: Cargo.toml
challenge29/: Cargo.toml
challenge3/: Cargo.toml
challenge30/: Cargo.toml
challenge31/: Cargo.toml
challenge31_32/: Cargo.toml
challenge33/: Cargo.toml
challenge34/: Cargo.toml
challenge35/: Cargo.toml
challenge36/: Cargo.toml
challenge37/: Cargo.toml
challenge38/: Cargo.toml
challenge39/: Cargo.toml
challenge4/: Cargo.toml
challenge40/: Cargo.toml
challenge41/: Cargo.toml
challenge42/: Cargo.toml
challenge43/: Cargo.toml
challenge44/: Cargo.toml
challenge45/: Cargo.toml
challenge46/: Cargo.toml
challenge47_48/: Cargo.toml
challenge5/: Cargo.toml
challenge6/: Cargo.toml
challenge7/: Cargo.toml
challenge8/: Cargo.toml
challenge9/: Cargo.toml
tools/: Cargo.toml
tools/src/: analyze.rs  encode.rs  encrypt.rs  lib.rs  random.rs
tools/src/bigint/: dsa.rs  mod.rs  rsa.rs  uint_dh.rs
tools/src/digest/: md4.rs  mod.rs  sha1.rs
(+46 files in other folders)
