[package]
name = "tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
crypto-bigint = "0.5.5"
crypto-primes = "0.5.0"
openssl = "0.10.64"
paste = "1.0.15"
rand = "0.8.5"
rand_core = "0.6.4"
